----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-05-03 Alexander M. Turek  <me@derrabus.de>
    * lang/german-*.inc.php: Clarification.

2004-05-03 Michal Cihar  <michal@cihar.com>
    * querywindow.php: Fix javascript error (bug #946823).
    * tbl_query_box.php: Stray <li> (bug #946530).
    * querywindow.php, tbl_query_box.php: A bit more XHTML validity.
    * css/phpmyadmin.css.php, libraries/common.lib.php: Make tabs CSS styled
      (RFE #946540).
    * db_details.php, tbl_change.php, tbl_query_box.php,
      css/phpmyadmin.css.php: Get rid of wrap="virtual" to achieve more XHTML
      validity.
    * libraries/common.lib.php, lang/*: Add Refresh link (RFE #942110).
    * sql.php, libraries/display_tbl.lib.php: Export only SELECT queries, do
      not show multi row actions when no checkboxes shown.

2004-05-03 Garvin Hicking <pma@supergarv.de>
    * lang/german* - Translation
    * left.php: Bug #946501 - Nested table now also work with aliased
      tablenames.
    * config.inc.php, libraries/config_import.lib.php, querywindow.php,
      footer.inc.php, Documentation.html: Removed obsolete
      QueryFrameDebug configuration directive
    * tbl_row_delete.php: Multi Row edit/delete: Fixed wrong switch
      structure to take previous settings into account.

2004-05-02 Michal Cihar  <michal@cihar.com>
    * tbl_change.php: Unclosed tag written by javascript (bug #945905).

2004-04-30 Michal Cihar  <michal@cihar.com>
    * libraries/auth/cookie.auth.lib.php: Do not double frames on login (bug
      #944870).

2004-04-29 Garvin Hicking <pma@supergarv.de>
    * db_details_structure.php: Bug #942362 - Colspan off by one
    * left.php: Modified js function to fit typecasting of Safari
    * browse_foreigners.php: Bug #928328 - Use correct urlencoding() of
      the primary key reference.

2004-04-29 Marc Delisle  <lem9@users.sourceforge.net>
    * scripts/create-release.sh: keep only one previous version in cvs-prev