@@ -5,6 +5,13 @@ phpMyAdmin - Changelog
 $Id$
 $Source$
 
+2004-05-04 Garvin Hicking <pma@supergarv.de>
+    * Documentation.html, config.inc.php, left.php: Use NaturalOrder
+      for Non-Light left frame. Introduce new option 'nested' for
+      $cfg['ShowTooltipAliasTB']. With this set Aliases are used for
+      virtual nested grouping, but for the tablename itself the tablename
+      will be show, not the Alias.
+
 2004-05-03 Alexander M. Turek  <me@derrabus.de>
     * lang/german-*.inc.php: Clarification.
 
